Revision history for App-Cmd

{{$NEXT}}

0.337     2024-12-30 17:58:25-05:00 America/New_York
        - improve how overriding getopt_conf interacts with unknown options

0.336     2023-08-26 11:07:01-04:00 America/New_York
        - allow getopt_conf to be provided by user (thanks, Michael McClimon!)
        - add "--version" to Simple commands (thanks, Diab Jerius!)
        - don't point to Plugin docs when they don't exist (thanks, Sawyer!)

0.335     2022-12-31 17:00:35-05:00 America/New_York
        - update author contact info

0.334     2021-06-18 22:14:14-04:00 America/New_York
        - add a perl-support block to docs
        - update author contact info

0.333     2021-03-14 15:45:02-04:00 America/New_York
        - dial back required perl to v5.20.0

0.332     2021-03-12 21:25:38-05:00 America/New_York
        - bump up minimum required perl to the one from 5yr ago
        - make some tests laxer to prep for changes in Getopt::Long::Descriptive
        - the App::Cmd object is constructed and blessed in new before _command
          is called on it (thanks, Lucas Theisen)

0.331     2016-07-17 15:56:11-04:00 America/New_York
        - documentation improvements (thanks, Davor Cubranic!)

0.330     2015-10-23 23:21:35-04:00 America/New_York
        - do not add "--help" to global opt spec twice (oops!)

0.329     2015-10-07 13:01:34-04:00 America/New_York
        - bump required version of Pod::Usage

0.328     2015-09-03 20:37:50-04:00 America/New_York
        - get command description from Pod by default (Jakob Voss)
        - add a "--help" option to all commands by default (Jakob Voss)
        - add "command_groups" to group commands in listing (Jakob Voss)
        - fix the handling of "exit" in App::Cmd::Tester (Matthew Astley)
        - add 'show_version_cmd' option to enable display of 'version'
          command in command list. (John Anderson)
        - minor documentation improvements (Alberto Simões, rjbs)
